--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -11,7 +11,7 @@
 }
 
 code {
-  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-family: 'Consolas','Courier', monospace;
 }
 
 .highlight pre { background-color: #272822; }
