--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,10 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 Jekyll integration by Chris Bobbe | chrisbobbe.github.io
 -->
 <html>
-	{%- include head.html -%}
-	<body>
-		{{- content -}}
-		{%- include footer.html -%}
-	</body>
+    {%- include head.html -%}
+    <script id="dsq-count-scr" src="//zer0days-blog.disqus.com/count.js" async></script>
+    <body>
+        {{- content -}}
+        {%- include footer.html -%}
+    </body>
 </html>
