--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,14 +5,20 @@ layout: default
 
 <!-- Main -->
 <div id="main">
-	<!-- Post -->
-	<article class="shade-two">
-	  <div class="container">
-			<header>
-				<h2>{{- page.title -}}</h2>
-				<p>{% if page.author %}{{ page.author }}, {% endif %}{{- page.date | date_to_long_string -}}</p>
-			</header>
-	    {{- content -}}
-	  </div>
-	</article>
+    <!-- Post -->
+    <article class="shade-two">
+        <div class="container">
+            <header>
+                <h2>{{- page.title -}}</h2>
+                <p>{% if page.author %}{{ page.author }}, {% endif %}{{- page.date | date_to_long_string -}}</p>
+            </header>
+            {{- content -}}
+        </div>
+    </article>
 </div>
+
+{% include comments.html %}
+
+{% if page.comments %}
+<a href="https://kozistr.github.io{{ page.url }}#disqus_thread">0 Comments</a>
+{% endif %}
