--- a/src/components/PostList/postList.scss
+++ b/src/components/PostList/postList.scss
@@ -49,6 +49,7 @@
 
     .title {
       font-size: 1.3rem;
+      line-height: 1.5 !important;
 
       @media screen and (max-width: $break-m) {
         font-size: 1.1rem;
