--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -12,6 +12,8 @@
   }
 
   &.light {
+    color: $font-color-0 !important;
+
     @media screen and (max-width: $break-l) {
       #Header {
         background-color: $background-color;
@@ -20,6 +22,8 @@
   }
 
   &.dark {
+    color: $font-color-0-d !important;
+
     svg {
       color: #a3aab3;
     }
