--- a/src/utils/google-fonts.scss
+++ b/src/utils/google-fonts.scss
@@ -3,9 +3,8 @@
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/raleway-v17-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/raleway-v17-latin-regular.woff2') format('woff2'); /* Super Modern Browsers */
   src: local(''),
-       url('./fonts/raleway-v17-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('./fonts/raleway-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
        url('./fonts/raleway-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
        url('./fonts/raleway-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
@@ -18,9 +17,8 @@
   font-family: 'Nanum Gothic';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/nanum-gothic-v17-latin_korean-regular.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/nanum-gothic-v17-latin_korean-regular.woff2') format('woff2'); /* Super Modern Browsers */
   src: local('NanumGothic'),
-       url('./fonts/nanum-gothic-v17-latin_korean-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('./fonts/nanum-gothic-v17-latin_korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
        url('./fonts/nanum-gothic-v17-latin_korean-regular.woff') format('woff'), /* Modern Browsers */
        url('./fonts/nanum-gothic-v17-latin_korean-regular.ttf') format('truetype'), /* Safari, Android, iOS */
@@ -33,9 +31,8 @@
   font-family: 'Nanum Gothic';
   font-style: normal;
   font-weight: 700;
-  src: url('./fonts/nanum-gothic-v17-latin_korean-700.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/nanum-gothic-v17-latin_korean-700.woff2') format('woff2'); /* Super Modern Browsers */
   src: local('NanumGothic Bold'), local('NanumGothic-Bold'),
-       url('./fonts/nanum-gothic-v17-latin_korean-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('./fonts/nanum-gothic-v17-latin_korean-700.woff2') format('woff2'), /* Super Modern Browsers */
        url('./fonts/nanum-gothic-v17-latin_korean-700.woff') format('woff'), /* Modern Browsers */
        url('./fonts/nanum-gothic-v17-latin_korean-700.ttf') format('truetype'), /* Safari, Android, iOS */
@@ -48,9 +45,8 @@
   font-family: 'Nanum Gothic Coding';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.woff2') format('woff2'); /* Super Modern Browsers */
   src: local('NanumGothicCoding'),
-       url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
        url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.woff') format('woff'), /* Modern Browsers */
        url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.ttf') format('truetype'), /* Safari, Android, iOS */
@@ -63,9 +59,8 @@
   font-family: 'Nanum Gothic Coding';
   font-style: normal;
   font-weight: 700;
-  src: url('./fonts/nanum-gothic-coding-v14-latin_korean-700.eot'); /* IE9 Compat Modes */
+  src: url('./fonts/nanum-gothic-coding-v14-latin_korean-700.woff2') format('woff2'); /* Super Modern Browsers */
   src: local('NanumGothicCoding-Bold'),
-       url('./fonts/nanum-gothic-coding-v14-latin_korean-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
        url('./fonts/nanum-gothic-coding-v14-latin_korean-700.woff2') format('woff2'), /* Super Modern Browsers */
        url('./fonts/nanum-gothic-coding-v14-latin_korean-700.woff') format('woff'), /* Modern Browsers */
        url('./fonts/nanum-gothic-coding-v14-latin_korean-700.ttf') format('truetype'), /* Safari, Android, iOS */
