--- a/src/utils/google-fonts.scss
+++ b/src/utils/google-fonts.scss
@@ -1,14 +1,16 @@
+/**
+  Super Modern Browsers : Chomr 26+, Opera 23+, FireFox 39+
+  Modern Browsers : Chrome 6+, FireFox 3.6+, IE 9+, Safari 5.1+
+*/
+
 /* raleway-regular - latin */
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/raleway-v17-latin-regular.woff2') format('woff2'); /* Super Modern Browsers */
   src: local(''),
-       url('./fonts/raleway-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/raleway-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/raleway-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/raleway-v17-latin-regular.svg#Raleway') format('svg'); /* Legacy iOS */
+       url('./fonts/raleway-v28-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/raleway-v28-latin-regular.woff') format('woff'); /* Modern Browsers */
   font-display: swap;
 }
 
@@ -17,12 +19,9 @@
   font-family: 'Nanum Gothic';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/nanum-gothic-v17-latin_korean-regular.woff2') format('woff2'); /* Super Modern Browsers */
   src: local('NanumGothic'),
-       url('./fonts/nanum-gothic-v17-latin_korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/nanum-gothic-v17-latin_korean-regular.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/nanum-gothic-v17-latin_korean-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/nanum-gothic-v17-latin_korean-regular.svg#NanumGothic') format('svg'); /* Legacy iOS */
+       url('./fonts/nanum-gothic-v21-latin_korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/nanum-gothic-v21-latin_korean-regular.woff') format('woff'); /* Modern Browsers */
   font-display: swap;
 }
 
@@ -31,12 +30,9 @@
   font-family: 'Nanum Gothic';
   font-style: normal;
   font-weight: 700;
-  src: url('./fonts/nanum-gothic-v17-latin_korean-700.woff2') format('woff2'); /* Super Modern Browsers */
   src: local('NanumGothic Bold'), local('NanumGothic-Bold'),
-       url('./fonts/nanum-gothic-v17-latin_korean-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/nanum-gothic-v17-latin_korean-700.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/nanum-gothic-v17-latin_korean-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/nanum-gothic-v17-latin_korean-700.svg#NanumGothic') format('svg'); /* Legacy iOS */
+       url('./fonts/nanum-gothic-v21-latin_korean-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/nanum-gothic-v21-latin_korean-700.woff') format('woff'); /* Modern Browsers */
   font-display: swap
 }
 
@@ -45,12 +41,9 @@
   font-family: 'Nanum Gothic Coding';
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.woff2') format('woff2'); /* Super Modern Browsers */
   src: local('NanumGothicCoding'),
-       url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/nanum-gothic-coding-v14-latin_korean-regular.svg#NanumGothicCoding') format('svg'); /* Legacy iOS */
+       url('./fonts/nanum-gothic-coding-v19-latin_korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/nanum-gothic-coding-v19-latin_korean-regular.woff') format('woff'); /* Modern Browsers */
   font-display: swap;
 }
 
@@ -59,11 +52,8 @@
   font-family: 'Nanum Gothic Coding';
   font-style: normal;
   font-weight: 700;
-  src: url('./fonts/nanum-gothic-coding-v14-latin_korean-700.woff2') format('woff2'); /* Super Modern Browsers */
   src: local('NanumGothicCoding-Bold'),
-       url('./fonts/nanum-gothic-coding-v14-latin_korean-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/nanum-gothic-coding-v14-latin_korean-700.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/nanum-gothic-coding-v14-latin_korean-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/nanum-gothic-coding-v14-latin_korean-700.svg#NanumGothicCoding') format('svg'); /* Legacy iOS */
+       url('./fonts/nanum-gothic-coding-v19-latin_korean-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('./fonts/nanum-gothic-coding-v19-latin_korean-700.woff') format('woff'); /* Modern Browsers */
   font-display: swap;
 }
