--- a/src/utils/google-fonts.scss
+++ b/src/utils/google-fonts.scss
@@ -1,59 +1,21 @@
-/**
-  Super Modern Browsers : Chomr 26+, Opera 23+, FireFox 39+
-  Modern Browsers : Chrome 6+, FireFox 3.6+, IE 9+, Safari 5.1+
-*/
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Nanum+Gothic+Coding:wght@400;700&family=Raleway:wght@400&display=swap');
 
-/* raleway-regular - latin */
-@font-face {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 400;
-  src: local(''),
-       url('./fonts/raleway-v28-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/raleway-v28-latin-regular.woff') format('woff'); /* Modern Browsers */
-  font-display: swap;
+$font-family-raleway: 'Raleway', 'Nanum Gothic';
+$font-family-nanum-gothic: 'Nanum Gothic', sans-serif;
+$font-family-nanum-gothic-coding: 'Nanum Gothic Coding', monospace;
+
+@mixin apply-font($font-family) {
+  font-family: $font-family;
 }
 
-/* nanum-gothic-regular - latin_korean */
-@font-face {
-  font-family: 'Nanum Gothic';
-  font-style: normal;
-  font-weight: 400;
-  src: local('NanumGothic'),
-       url('./fonts/nanum-gothic-v21-latin_korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/nanum-gothic-v21-latin_korean-regular.woff') format('woff'); /* Modern Browsers */
-  font-display: swap;
+body {
+  @include apply-font($font-family-raleway);
 }
 
-/* nanum-gothic-700 - latin_korean */
-@font-face {
-  font-family: 'Nanum Gothic';
-  font-style: normal;
-  font-weight: 700;
-  src: local('NanumGothic Bold'), local('NanumGothic-Bold'),
-       url('./fonts/nanum-gothic-v21-latin_korean-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/nanum-gothic-v21-latin_korean-700.woff') format('woff'); /* Modern Browsers */
-  font-display: swap
+.nanum-gothic {
+  @include apply-font($font-family-nanum-gothic);
 }
 
-/* nanum-gothic-coding-regular - latin_korean */
-@font-face {
-  font-family: 'Nanum Gothic Coding';
-  font-style: normal;
-  font-weight: 400;
-  src: local('NanumGothicCoding'),
-       url('./fonts/nanum-gothic-coding-v19-latin_korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/nanum-gothic-coding-v19-latin_korean-regular.woff') format('woff'); /* Modern Browsers */
-  font-display: swap;
-}
-
-/* nanum-gothic-coding-700 - latin_korean */
-@font-face {
-  font-family: 'Nanum Gothic Coding';
-  font-style: normal;
-  font-weight: 700;
-  src: local('NanumGothicCoding-Bold'),
-       url('./fonts/nanum-gothic-coding-v19-latin_korean-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/nanum-gothic-coding-v19-latin_korean-700.woff') format('woff'); /* Modern Browsers */
-  font-display: swap;
+.nanum-gothic-coding {
+  @include apply-font($font-family-nanum-gothic-coding);
 }
