--- a/src/utils/google-fonts.scss
+++ b/src/utils/google-fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Nanum+Gothic+Coding:wght@400;700&family=Raleway:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Nanum+Gothic+Coding:wght@400;700&family=Raleway:wght@400&display=swap@subset=korean,latin');
 
 $font-family-raleway: 'Raleway', 'Nanum Gothic';
 $font-family-nanum-gothic: 'Nanum Gothic', sans-serif;
