--- a/src/utils/google-fonts.scss
+++ b/src/utils/google-fonts.scss
@@ -1,46 +1,21 @@
-$font-url: 'https://fonts.googleapis.com/css2?family=';
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&family=Nanum+Gothic+Coding:wght@400;700&family=Raleway:wght@400&display=swap@subset=korean,latin');
 
-@font-face {
-  font-family: 'Nanum Gothic';
-  font-style: normal;
+$font-family-raleway: 'Raleway', 'Nanum Gothic';
+$font-family-nanum-gothic: 'Nanum Gothic', sans-serif;
+$font-family-nanum-gothic-coding: 'Nanum Gothic Coding', monospace;
+
+body, .nanum-gothic, .nanum-gothic-coding {
   font-display: swap;
-  src: local('Nanum Gothic'), local('NanumGothic'),
-       url('#{$font-url}Nanum+Gothic:wght@400&display=swap&subset=korean,latin') format('woff2');
-  font-weight: 400;
 }
 
-@font-face {
-  font-family: 'Nanum Gothic';
-  font-style: normal;
-  font-display: swap;
-  src: local('Nanum Gothic Bold'), local('NanumGothic-Bold'),
-       url('#{$font-url}Nanum+Gothic:wght@700&display=swap&subset=korean,latin') format('woff2');
-  font-weight: 700;
+body {
+  font-family: $font-family-raleway;
 }
 
-@font-face {
-  font-family: 'Nanum Gothic Coding';
-  font-style: normal;
-  font-display: swap;
-  src: local('Nanum Gothic Coding'), local('NanumGothicCoding'),
-       url('#{$font-url}Nanum+Gothic+Coding:wght@400&display=swap&subset=korean,latin') format('woff2');
-  font-weight: 400;
+.nanum-gothic {
+  font-family: $font-family-nanum-gothic;
 }
 
-@font-face {
-  font-family: 'Nanum Gothic Coding';
-  font-style: normal;
-  font-display: swap;
-  src: local('Nanum Gothic Coding Bold'), local('NanumGothicCoding-Bold'),
-       url('#{$font-url}Nanum+Gothic+Coding:wght@700&display=swap&subset=korean,latin') format('woff2');
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: 'Raleway';
-  font-style: normal;
-  font-display: swap;
-  src: local('Raleway'),
-       url('#{$font-url}Raleway:wght@400&display=swap&subset=korean,latin') format('woff2');
-  font-weight: 400;
+.nanum-gothic-coding {
+  font-family: $font-family-nanum-gothic-coding;
 }
