update: remove nanum gothic coding

--- a/src/templates/md-style.scss
+++ b/src/templates/md-style.scss
@@ -29,7 +29,7 @@
     background-color: #cccccc;
   }
   code {
-    font-family: 'Nanum Gothic Coding' !important;
+    font-family: 'monospace' !important;
   }
   blockquote {
     font-size: 0.9rem;
